fixed bug with overflow and datatooltip

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -252,11 +252,12 @@ footer {
     position: absolute;
     right: 0;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 100rem;
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
     background: rgb(0 0 0 / 0.5);
+    overflow: hidden;
 }
 
 .mobile-nav-links-wrapper[data-visible="false"] {
@@ -267,13 +268,14 @@ footer {
     position: fixed;
     right: 0;
     top: 0;
-    width: 70vw;
+    width: 70%;
     height: 100vh;
     background-color: var(--navbar);
     transform: translateX(5%);
     transition: all 6s ease-in;
     -webkit-transition: all 6s ease-in;
     /* outline: var(--off-white2) 1px solid; */
+    overflow: hidden;
 }
 
 .mobile-nav-ul-wrapper.open {
@@ -284,7 +286,6 @@ footer {
     display: flex;
     flex-direction: column;
     position: absolute;
-    left: 0;
     top: 8rem;
     left: 5%;
     font-size: 1rem;
@@ -295,6 +296,7 @@ footer {
     align-items: flex-start;
     align-content: flex-start;
     padding: 0;
+    overflow: hidden;
 }
 
 .mobile-nav-ul li a {
@@ -337,6 +339,7 @@ footer {
     width: 100%;
     gap: 2rem;
     bottom: 5%;
+    overflow: hidden;
 }
 
 
@@ -373,6 +376,14 @@ footer {
     transform: translateY(2px);
 }
 
+.email {
+    padding: 0 auto;
+    cursor: pointer;
+    color: var(--cyan);
+    text-decoration: underline;
+    position: relative;
+}
+
 .side-email {
     width: 2rem;
     padding: 0 auto;
@@ -382,11 +393,11 @@ footer {
     position: relative;
 }
 
-[data-tooltip] {
+.side-email[data-tooltip] {
     position: relative;
 }
 
-[data-tooltip]:after {
+.side-email[data-tooltip]:after {
     content: attr(data-tooltip);
     position: absolute;
     background: var(--background-grey);
